# echopype

./: .pre-commit-config.yaml  .readthedocs.yml  README.md  pyproject.toml
.ci_helpers/: check_test_data_inventory.py  py3.11.yaml  py3.12.yaml  py3.13.yaml  py3.14.yaml
.ci_helpers/memory_usage/: build_memory_summary.py
.github/workflows/: build.yaml  docker.yaml  ep-install.yaml  packit.yaml  pr.yaml  pypi.yaml
docs/source/: _config.yml  _toc.yml  conf.py  contrib_howto.md  contrib_roadmap.md  contrib_setup.md  contrib_start.md  contrib_test_data.md  index.md  installation.md  open-converted.ipynb  references.bib  test_data_inventory.yml  test_data_inventory_ext.py
echopype/: core.py
echopype/calibrate/: __init__.py  api.py  cal_params.py  calibrate_azfp.py  calibrate_ek.py  ecs.py  ek80_complex.py  range.py
echopype/clean/: api.py
echopype/colormap/: cm.py
echopype/commongrid/: api.py  utils.py
echopype/consolidate/: api.py  loc_utils.py  split_beam_angle.py
echopype/convert/: __init__.py  api.py  parse_ad2cp.py  parse_azfp.py  parse_base.py  parse_bi500.py  parse_uls5.py  parse_uls6.py  set_groups_ad2cp.py  set_groups_base.py  set_groups_bi500.py  set_groups_ek60.py  set_groups_ek80.py
echopype/convert/utils/: ek_raw_parsers.py
echopype/echodata/: combine.py  echodata.py
echopype/echodata/convention/: 1.0.yml
echopype/mask/: api.py
echopype/mask/seafloor_detection/: bottom_blackwell.py
echopype/mask/single_target_detection/: detect_from_Sp.py  detect_from_Sv.py
echopype/metrics/: summary_statistics.py
echopype/qc/: api.py
echopype/tests/: conftest.py  test_core.py
echopype/tests/bi500/: N031-S445-S2000008-F011990-T01-D20000921-T034142-Info  N031-S445-S2000008-F011990-T01-D20000921-T034142-Ping  N031-S445-S2000008-F011990-T01-D20000921-T034142-Snap  N031-S445-S2000008-F011990-T01-D20000921-T034142-Vlog
echopype/tests/calibrate/: test_cal_params.py  test_cal_params_integration.py  test_calibrate.py  test_calibrate_ek80.py  test_calibrate_ek80_broadband_crimac.py  test_ecs.py  test_ecs_integration.py  test_ek80_complex.py  test_env_params.py  test_env_params_integration.py  test_range_integration.py
echopype/tests/clean/: test_noise.py
echopype/tests/colormap/: test_colormap.py
echopype/tests/commongrid/: test_commongrid_api.py
echopype/tests/consolidate/: test_add_depth.py  test_add_location.py  test_consolidate_integration.py
echopype/tests/convert/: test_convert_ad2cp.py  test_convert_azfp.py  test_convert_azfp6.py  test_convert_bi500.py  test_convert_ek.py  test_convert_ek60.py  test_convert_ek80.py  test_convert_source_target_locs.py  test_set_groups_common.py
echopype/tests/echodata/: test_echodata.py  test_echodata_combine.py  test_echodata_simrad.py  test_echodata_version_convert.py  utils.py
echopype/tests/mask/: test_mask.py  test_regrid_mask.py
echopype/tests/metrics/: test_metrics_summary_statistics.py
echopype/tests/qc/: test_qc.py
echopype/tests/utils/: test_align.py  test_coding.py  test_processinglevels_integration.py  test_utils_io.py
echopype/utils/: align.py  coding.py  io.py
