[build-system]
requires = [
    "setuptools >= 68",
    "setuptools_scm[toml] >= 8.0",
    "wheel >= 0.29.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "echopype"
description = "Enhancing the interoperability and scalability in analyzing ocean sonar data"
readme = "README.md"
requires-python = ">=3.12, <3.15"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Wu-Jung Lee", email = "leewujung@gmail.com" },
]
maintainers = [
    { name = "Wu-Jung Lee", email = "leewujung@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
dependencies = [
    "aiohttp",
    "bottleneck",
    "dask[array,distributed]",
    "dask-image",
    "flox>=0.7.2",
    "fsspec",
    "geopy",
    "jinja2",
    "netCDF4>1.6",
    "numpy",
    "pandas",
    "psutil>=5.9.1",
    "pynmea2",
    "pytz",
    "requests",
    "s3fs",
    "scipy",
    "typing-extensions",
    "xarray>=2026.01.0",
    "zarr>=3",
]

[project.urls]
Homepage = "https://github.com/echostack-org/echopype"
Repository = "https://github.com/echostack-org/echopype"
Documentation = "https://echopype.readthedocs.io"

[project.optional-dependencies]
plot = [
    "matplotlib>=3.7",
    "cmocean",
]

[dependency-groups]
test = [
    "moto",
    "pooch",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "matplotlib",
]

docs = [
    "jupyter-book",
    "linkify-it-py",
    "myst-nb",
    "numpydoc",
    "sphinx",
    "sphinx-automodapi",
    "sphinx-book-theme",
    "sphinx-comments",
    "sphinx-copybutton",
    "sphinx-external-toc",
    "sphinx-jupyterbook-latex",
    "sphinx-panels",
    "sphinx-thebe",
    "sphinx-togglebutton",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-mermaid",
    "sphinx-inline-tabs",
]

dev = [
    "black",
    "check-manifest",
    "codespell",
    "ipykernel",
    "isort",
    "mypy",
    "pre-commit",
    "pylint",
    "ruff",
    "setuptools_scm",
    "twine",
    "wheel",
]

[tool.setuptools]
include-package-data = true
py-modules = ["_echopype_version"]

[tool.setuptools.packages.find]
include = ["echopype*"]

[tool.setuptools_scm]
fallback_version = "0.0"
local_scheme = "node-and-date"
version_file = "_echopype_version.py"
version_file_template = 'version = "{version}"  # noqa'

[tool.pytest.ini_options]
testpaths = ["echopype/tests"]
cache_dir = ".cache"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]

# Most of these ignore warnings generated by libraries that echopype uses and hopefully will
# go away as those packages themselves resolve the warnings.
filterwarnings = [
    "ignore::zarr.errors.UnstableSpecificationWarning",  # to do with UTF32 strings
    "ignore:Setting the shape on a NumPy array has been deprecated in NumPy 2.5",  # netCDF4 library issue
    "ignore::DeprecationWarning:flox",  # flox issue with numpy timedelta  
    "ignore:Consolidated metadata is currently not part in the Zarr format 3 specification",  # zarr issue
    "ignore::zarr.errors.ZarrUserWarning"  # Many of these warnings, perhaps best to not ignore for too long
]

[tool.uv]
exclude-newer = "7 days"
default-groups = ["dev", "test"]

[tool.black]
line-length = 100

[tool.isort]
known_first_party = "echopype"
known_third_party = ["_echopype_version", "setuptools"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "*.ipynb",
]

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
    "E722",
    "E203",
]

[tool.ruff.lint.isort]
known-first-party = ["echopype"]
combine-as-imports = true
